--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,7 +2,7 @@ name: Build Test
 
 on:
   push:
-    branches: [ "master" ]
+    branches: [ "master", "workflow" ]
   pull_request:
     branches: [ "master" ]
 
