--- a/resources/profiles/Creality.ini
+++ b/resources/profiles/Creality.ini
@@ -374,6 +374,15 @@ bed_model = cr8_bed.stl
 bed_texture = cr8.svg
 default_materials = Generic PLA @CREALITY; Generic PETG @CREALITY; Generic ABS @CREALITY; Creality PLA @CREALITY; Prusament PLA @CREALITY; Prusament PETG @CREALITY; AzureFilm PLA @CREALITY; Devil Design PLA @CREALITY; Devil Design PLA Matt @CREALITY; Devil Design PLA Galaxy @CREALITY; Extrudr PLA NX2 @CREALITY; Real Filament PLA @CREALITY; Velleman PLA @CREALITY; 3DJAKE ecoPLA @CREALITY; 3DJAKE ecoPLA Matt @CREALITY; 3DJAKE ecoPLA Tough @CREALITY; 123-3D Jupiter PLA @CREALITY; Verbatim PLA @CREALITY
 
+[printer_model:CRM4]
+name = Creality CR-M4
+variants = 0.4; 0.3; 0.5; 0.6
+technology = FFF
+family = CR
+bed_model = crm4_bed.stl
+bed_texture = crm4.svg
+default_materials = Generic PLA @CREALITY; Generic PETG @CREALITY; Generic ABS @CREALITY; Creality PLA @CREALITY; Prusament PLA @CREALITY; Prusament PETG @CREALITY; AzureFilm PLA @CREALITY; Devil Design PLA @CREALITY; Devil Design PLA Matt @CREALITY; Devil Design PLA Galaxy @CREALITY; Extrudr PLA NX2 @CREALITY; Real Filament PLA @CREALITY; Velleman PLA @CREALITY; 3DJAKE ecoPLA @CREALITY; 3DJAKE ecoPLA Matt @CREALITY; 3DJAKE ecoPLA Tough @CREALITY; 123-3D Jupiter PLA @CREALITY; Verbatim PLA @CREALITY
+
 #[printer_model:CRX]
 #name = Creality CR-X
 #variants = 0.4; 0.3; 0.5; 0.6
@@ -401,8 +410,6 @@ bed_model = sermoond1_bed.stl
 bed_texture = sermoond1.svg
 default_materials = Generic PLA @CREALITY; Generic PETG @CREALITY; Generic ABS @CREALITY; Creality PLA @CREALITY; Prusament PLA @CREALITY; Prusament PETG @CREALITY; AzureFilm PLA @CREALITY; Devil Design PLA @CREALITY; Devil Design PLA Matt @CREALITY; Devil Design PLA Galaxy @CREALITY; Extrudr PLA NX2 @CREALITY; Real Filament PLA @CREALITY; Velleman PLA @CREALITY; 3DJAKE ecoPLA @CREALITY; 3DJAKE ecoPLA Matt @CREALITY; 3DJAKE ecoPLA Tough @CREALITY; 123-3D Jupiter PLA @CREALITY; Verbatim PLA @CREALITY
 
-
-
 [printer_model:SERMOONV1]
 name = Creality Sermoon-V1
 variants = 0.4; 0.3; 0.5; 0.6
@@ -412,8 +419,6 @@ bed_model = sermoonv1_bed.stl
 bed_texture = sermoonv1.svg
 default_materials = Generic PLA @CREALITY; Generic PETG @CREALITY; Generic ABS @CREALITY; Creality PLA @CREALITY; Prusament PLA @CREALITY; Prusament PETG @CREALITY; AzureFilm PLA @CREALITY; Devil Design PLA @CREALITY; Devil Design PLA Matt @CREALITY; Devil Design PLA Galaxy @CREALITY; Extrudr PLA NX2 @CREALITY; Real Filament PLA @CREALITY; Velleman PLA @CREALITY; 3DJAKE ecoPLA @CREALITY; 3DJAKE ecoPLA Matt @CREALITY; 3DJAKE ecoPLA Tough @CREALITY; 123-3D Jupiter PLA @CREALITY; Verbatim PLA @CREALITY
 
-
-
 [printer_model:SERMOONV1PRO]
 name = Creality Sermoon-V1 Pro
 variants = 0.4; 0.3; 0.5; 0.6
@@ -421,6 +426,24 @@ technology = FFF
 family = SERMOON
 bed_model = sermoonv1_bed.stl
 bed_texture = sermoonv1.svg
+default_materials = Generic PLA @CREALITY; Generic PETG @CREALITY; Generic ABS @CREALITY; Creality PLA @CREALITY; Prusament PLA @CREALITY; Prusament PETG @CREALITY; AzureFilm PLA @CREALITY; Devil Design PLA @CREALITY; Devil Design PLA Matt @CREALITY; Devil Design PLA Galaxy @CREALITY; Extrudr PLA NX2 @CREALITY; Real Filament PLA @CREALITY; Velleman PLA @CREALITY; 3DJAKE ecoPLA @CREALITY; 3DJAKE ecoPLA Matt @CREALITY; 3DJAKE ecoPLA Tough @CREALITY; 123-3D Jupiter PLA @CREALITY; Verbatim PLA @CREALITY
+
+[printer_model:K1]
+name = Creality K1
+variants = 0.4; 0.3; 0.5; 0.6
+technology = FFF
+family = K
+bed_model = k1_bed.stl
+bed_texture = k1.svg
+default_materials = Generic PLA @CREALITY; Generic PETG @CREALITY; Generic ABS @CREALITY; Creality PLA @CREALITY; Prusament PLA @CREALITY; Prusament PETG @CREALITY; AzureFilm PLA @CREALITY; Devil Design PLA @CREALITY; Devil Design PLA Matt @CREALITY; Devil Design PLA Galaxy @CREALITY; Extrudr PLA NX2 @CREALITY; Real Filament PLA @CREALITY; Velleman PLA @CREALITY; 3DJAKE ecoPLA @CREALITY; 3DJAKE ecoPLA Matt @CREALITY; 3DJAKE ecoPLA Tough @CREALITY; 123-3D Jupiter PLA @CREALITY; Verbatim PLA @CREALITY
+
+[printer_model:K1MAX]
+name = Creality K1 Max
+variants = 0.4; 0.3; 0.5; 0.6
+technology = FFF
+family = K
+bed_model = k1max_bed.stl
+bed_texture = k1max.svg
 default_materials = Generic PLA @CREALITY; Generic PETG @CREALITY; Generic ABS @CREALITY; Creality PLA @CREALITY; Prusament PLA @CREALITY; Prusament PETG @CREALITY; AzureFilm PLA @CREALITY; Devil Design PLA @CREALITY; Devil Design PLA Matt @CREALITY; Devil Design PLA Galaxy @CREALITY; Extrudr PLA NX2 @CREALITY; Real Filament PLA @CREALITY; Velleman PLA @CREALITY; 3DJAKE ecoPLA @CREALITY; 3DJAKE ecoPLA Matt @CREALITY; 3DJAKE ecoPLA Tough @CREALITY; 123-3D Jupiter PLA @CREALITY; Verbatim PLA @CREALITY
 
 
@@ -2606,6 +2629,27 @@ inherits = *CR8*; *0.6nozzle*
 
 
 
+[printer:*CRM4*]
+inherits = *common*; *spriteextruder*; *slowabl*; *32bitmainboard*
+bed_shape = 5x5,445x5,445x215,5x445
+max_print_height = 470
+printer_model = CRM4
+printer_notes = Don't remove the following keywords! These keywords are used in the "compatible printer" condition of the print and filament profiles to link the particular print and filament profiles to this printer profile.\nPRINTER_VENDOR_CREALITY\nPRINTER_MODEL_CRM4\nPRINTER_HAS_HIGHSPEED
+
+[printer:Creality CR-M4 (0.3 mm nozzle)]
+inherits = *CRM4*; *0.3nozzle*
+
+[printer:Creality CR-M4 (0.4 mm nozzle)]
+inherits = *CRM4*; *0.4nozzle*
+
+[printer:Creality CR-M4 (0.5 mm nozzle)]
+inherits = *CRM4*; *0.5nozzle*
+
+[printer:Creality CR-M4 (0.6 mm nozzle)]
+inherits = *CRM4*; *0.6nozzle*
+
+
+
 [printer:*SERMOOND1*]
 inherits = *common*; *directdriveextruder*; *descendingz*
 bed_shape = 5x5,275x5,275x255,5x255
@@ -2667,3 +2711,45 @@ inherits = *SERMOONV1PRO*; *0.5nozzle*
 
 [printer:Creality Sermoon-V1 Pro (0.6 mm nozzle)]
 inherits = *SERMOONV1PRO*; *0.6nozzle*
+
+
+
+[printer:*K1*]
+inherits = *common*; *spriteextruder*; *fastabl*; *descendingz*; *32bitmainboard*
+bed_shape = 5,215x5,215x215,5x215
+max_print_height = 250
+printer_model = K1
+printer_notes = Don't remove the following keywords! These keywords are used in the "compatible printer" condition of the print and filament profiles to link the particular print and filament profiles to this printer profile.\nPRINTER_VENDOR_CREALITY\nPRINTER_MODEL_K1\nPRINTER_HAS_ULTRADETAIL\nPRINTER_HAS_HIGHSPEED\nPRINTER_HAS_SUPERSPEED
+
+[printer:Creality K1 (0.3 mm nozzle)]
+inherits = *K1*; *0.3nozzle*
+
+[printer:Creality K1 (0.4 mm nozzle)]
+inherits = *K1*; *0.4nozzle*
+
+[printer:Creality K1 (0.5 mm nozzle)]
+inherits = *K1*; *0.5nozzle*
+
+[printer:Creality K1 (0.6 mm nozzle)]
+inherits = *K1*; *0.6nozzle*
+
+
+
+[printer:*K1MAX*]
+inherits = *common*; *spriteextruder*; *slowabl*; *descendingz*; *32bitmainboard*
+bed_shape = 5,295x5,295x295,5x295
+max_print_height = 300
+printer_model = K1MAX
+printer_notes = Don't remove the following keywords! These keywords are used in the "compatible printer" condition of the print and filament profiles to link the particular print and filament profiles to this printer profile.\nPRINTER_VENDOR_CREALITY\nPRINTER_MODEL_K1MAX\nPRINTER_HAS_ULTRADETAIL\nPRINTER_HAS_HIGHSPEED\nPRINTER_HAS_SUPERSPEED
+
+[printer:Creality K1 (0.3 mm nozzle)]
+inherits = *K1MAX*; *0.3nozzle*
+
+[printer:Creality K1 (0.4 mm nozzle)]
+inherits = *K1MAX*; *0.4nozzle*
+
+[printer:Creality K1 (0.5 mm nozzle)]
+inherits = *K1MAX*; *0.5nozzle*
+
+[printer:Creality K1 (0.6 mm nozzle)]
+inherits = *K1MAX*; *0.6nozzle*
