Update LNL3D D3 name

--- a/resources/profiles/LNL3D.ini
+++ b/resources/profiles/LNL3D.ini
@@ -25,7 +25,7 @@ changelog_url = https://files.prusa3d.com/?latest=slicer-profiles&lng=%1%
 # Printer model name will be shown by the installation wizard.
 
 [printer_model:LNL3D_D3]
-name = LNL3D D3
+name = LNL3D D3 V2
 variants = 0.4; 0.2; 0.6; 0.8
 technology = FFF
 family = LNL3D
@@ -929,16 +929,16 @@ bed_shape = 0x0,300x0,300x300,0x300
 max_print_height = 350
 printer_notes = Don't remove the following keywords! These keywords are used in the "compatible printer" condition of the print and filament profiles to link the particular print and filament profiles to this printer profile.\nPRINTER_VENDOR_LNL3D\nPRINTER_MODEL_LNL3D_D3\nPRINTER_HAS_ULTRADETAIL\nPRINTER_HAS_HIGHSPEED\nPRINTER_HAS_SUPERSPEED
 
-[printer:LNL3D D3 (0.2 mm nozzle)]
+[printer:LNL3D D3 V2 (0.2 mm nozzle)]
 inherits = *LNL3D_D3*; *0.2nozzle*
 
-[printer:LNL3D D3 (0.4 mm nozzle)]
+[printer:LNL3D D3 V2 (0.4 mm nozzle)]
 inherits = *LNL3D_D3*; *0.4nozzle*
 
-[printer:LNL3D D3 (0.6 mm nozzle)]
+[printer:LNL3D D3 V2 (0.6 mm nozzle)]
 inherits = *LNL3D_D3*; *0.6nozzle*
 
-[printer:LNL3D D3 (0.8 mm nozzle)]
+[printer:LNL3D D3 V2 (0.8 mm nozzle)]
 inherits = *LNL3D_D3*; *0.8nozzle*
 
 
