Drop wxWidgets 3.0 and SLIC3R_WX_STABLE

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -49,23 +49,17 @@ if (SLIC3R_GUI)
 
     if (CMAKE_SYSTEM_NAME STREQUAL "Linux")
         set (wxWidgets_CONFIG_OPTIONS "--toolkit=gtk${SLIC3R_GTK}")
-        if (SLIC3R_WX_STABLE)
-            find_package(wxWidgets 3.0 REQUIRED COMPONENTS base core adv html gl)
-        else ()
-            find_package(wxWidgets 3.1 QUIET COMPONENTS base core adv html gl)
-
-            if (NOT wxWidgets_FOUND)
-                message(FATAL_ERROR "\nCould not find wxWidgets 3.1.\n"
-                    "Hint: On Linux you can set -DSLIC3R_WX_STABLE=1 to use wxWidgets 3.0\n")
-            endif ()
+        find_package(wxWidgets 3.1.6 QUIET COMPONENTS base core adv html gl)
+        if (NOT wxWidgets_FOUND)
+            message(FATAL_ERROR "Could not find wxWidgets >= 3.1.6")
         endif ()
 
         include(${wxWidgets_USE_FILE})
     else ()
-        find_package(wxWidgets 3.1 COMPONENTS html adv gl core base)
+        find_package(wxWidgets 3.1.6 COMPONENTS html adv gl core base)
         if (NOT wxWidgets_FOUND)
             message(STATUS "Trying to find wxWidgets in CONFIG mode...")
-            find_package(wxWidgets 3.2 CONFIG REQUIRED COMPONENTS html adv gl core base)
+            find_package(wxWidgets 3.1.6 CONFIG REQUIRED COMPONENTS html adv gl core base)
             slic3r_remap_configs(wx::wxhtml wx::wxadv wx::wxgl wx::wxcore wx::wxbase RelWithDebInfo Release)
         else ()
             include(${wxWidgets_USE_FILE})
