Add openssl and crypto to CMake file

--- a/src/libslic3r/CMakeLists.txt
+++ b/src/libslic3r/CMakeLists.txt
@@ -554,6 +554,8 @@ target_link_libraries(libslic3r
     libexpat
     glu-libtess
     qhull
+    ssl
+    crypto
     semver
     TBB::tbb
     TBB::tbbmalloc
