--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -126,4 +126,5 @@ jobs:
       run: |
         c:
         cd \PrusaSlicer
-        ./build_win.bat -d=..\PrusaSlicer-deps -r=none -v 17
+        #./build_win.bat -d=..\PrusaSlicer-deps -r=none -v 17
+        ./build_win.bat -d=..\PrusaSlicer-deps -r=none -v 16
