--- a/resources/profiles/PrusaResearch.ini
+++ b/resources/profiles/PrusaResearch.ini
@@ -355,7 +355,7 @@ support_tree_tip_diameter = 0.6
 support_tree_top_rate = 30%
 
 [print:*MK3*]
-fill_pattern = grid
+fill_pattern = lightning
 single_extruder_multi_material_priming = 0
 travel_speed = 180
 wipe_tower_x = 170
@@ -374,7 +374,7 @@ solid_infill_acceleration = 1500
 infill_acceleration = 2000
 infill_anchor = 2
 perimeter_acceleration = 1000
-fill_pattern = grid
+fill_pattern = lightning
 skirts = 0
 extruder_clearance_height = 21
 extruder_clearance_radius = 67
@@ -409,7 +409,7 @@ infill_acceleration = 2000
 infill_anchor = 2
 perimeter_acceleration = 800
 first_layer_acceleration = 600
-fill_pattern = grid
+fill_pattern = lightning
 skirts = 0
 extruder_clearance_height = 13
 extruder_clearance_radius = 45
@@ -433,7 +433,7 @@ fill_pattern = gyroid
 fill_density = 15%
 
 [print:*MINI*]
-fill_pattern = grid
+fill_pattern = lightning
 travel_speed = 150
 wipe_tower = 0
 default_acceleration = 1000
@@ -489,7 +489,7 @@ first_layer_acceleration = 500
 default_acceleration = 1000
 max_print_speed = 80
 perimeters = 3
-fill_pattern = grid
+fill_pattern = lightning
 fill_density = 20%
 wipe_tower_bridging = 6
 output_filename_format = {input_filename_base}_0.25n_{layer_height}mm_{printing_filament_types}_{printer_model}_{print_time}.gcode
@@ -1343,7 +1343,7 @@ support_material_with_sheath = 0
 [print:0.05mm ULTRADETAIL @0.25 nozzle MK3]
 inherits = *0.05mm*; *0.25nozzle*; *MK3*
 compatible_printers_condition = printer_notes=~/.*PRINTER_VENDOR_PRUSA3D.*/ and printer_notes=~/.*PRINTER_MODEL_MK3.*/ and nozzle_diameter[0]==0.25 and num_extruders==1
-fill_pattern = grid
+fill_pattern = lightning
 fill_density = 20%
 support_material_contact_distance = 0.07
 raft_contact_distance = 0.07
@@ -1355,7 +1355,7 @@ infill_speed = 30
 solid_infill_speed = 30
 support_material_speed = 30
 top_solid_infill_speed = 20
-fill_pattern = grid
+fill_pattern = lightning
 fill_density = 20%
 support_material_contact_distance = 0.07
 raft_contact_distance = 0.07
@@ -1363,7 +1363,7 @@ raft_contact_distance = 0.07
 [print:0.10mm DETAIL @0.25 nozzle MK3]
 inherits = *0.10mm*; *0.25nozzleMK3*; *MK3*
 compatible_printers_condition = printer_notes=~/.*PRINTER_VENDOR_PRUSA3D.*/ and printer_notes=~/.*PRINTER_MODEL_MK3.*/ and nozzle_diameter[0]==0.25
-fill_pattern = grid
+fill_pattern = lightning
 fill_density = 20%
 support_material_contact_distance = 0.07
 raft_contact_distance = 0.07
@@ -1371,7 +1371,7 @@ raft_contact_distance = 0.07
 [print:0.15mm QUALITY @0.25 nozzle MK3]
 inherits = *0.15mm*; *0.25nozzleMK3*; *MK3*
 compatible_printers_condition = printer_notes=~/.*PRINTER_VENDOR_PRUSA3D.*/ and printer_notes=~/.*PRINTER_MODEL_MK3.*/ and nozzle_diameter[0]==0.25
-fill_pattern = grid
+fill_pattern = lightning
 fill_density = 20%
 support_material_contact_distance = 0.08
 raft_contact_distance = 0.07
@@ -1697,7 +1697,7 @@ external_perimeter_acceleration = 800
 [print:0.05mm ULTRADETAIL @0.25 nozzle MINI]
 inherits = *0.05mm*; *0.25nozzle*; *MINI*
 compatible_printers_condition = printer_notes=~/.*PRINTER_VENDOR_PRUSA3D.*/ and printer_model=="MINI" and nozzle_diameter[0]==0.25
-fill_pattern = grid
+fill_pattern = lightning
 fill_density = 20%
 support_material_speed = 30
 support_material_contact_distance = 0.07
@@ -1715,7 +1715,7 @@ infill_speed = 30
 solid_infill_speed = 30
 support_material_speed = 30
 top_solid_infill_speed = 20
-fill_pattern = grid
+fill_pattern = lightning
 fill_density = 20%
 support_material_contact_distance = 0.07
 raft_contact_distance = 0.07
@@ -1728,7 +1728,7 @@ output_filename_format = {input_filename_base}_0.25n_{layer_height}mm_{printing_
 [print:0.10mm DETAIL @0.25 nozzle MINI]
 inherits = *0.10mm*; *0.25nozzleMINI*; *MINI*
 compatible_printers_condition = printer_notes=~/.*PRINTER_VENDOR_PRUSA3D.*/ and printer_model=="MINI" and nozzle_diameter[0]==0.25
-fill_pattern = grid
+fill_pattern = lightning
 fill_density = 20%
 support_material_contact_distance = 0.07
 raft_contact_distance = 0.07
@@ -1741,7 +1741,7 @@ output_filename_format = {input_filename_base}_0.25n_{layer_height}mm_{printing_
 [print:0.15mm QUALITY @0.25 nozzle MINI]
 inherits = *0.15mm*; *0.25nozzleMINI*; *MINI*
 compatible_printers_condition = printer_notes=~/.*PRINTER_VENDOR_PRUSA3D.*/ and printer_model=="MINI" and nozzle_diameter[0]==0.25
-fill_pattern = grid
+fill_pattern = lightning
 fill_density = 20%
 support_material_contact_distance = 0.08
 raft_contact_distance = 0.07
@@ -3791,7 +3791,7 @@ extruder_clearance_radius = 45
 extrusion_width = 0.45
 fill_angle = 45
 fill_density = 15%
-fill_pattern = grid
+fill_pattern = lightning
 first_layer_acceleration = 500
 first_layer_acceleration_over_raft = 0
 first_layer_extrusion_width = 0.5
@@ -4714,7 +4714,7 @@ extruder_clearance_radius = 45
 extrusion_width = 0.45
 fill_angle = 45
 fill_density = 15%
-fill_pattern = grid
+fill_pattern = lightning
 first_layer_acceleration = 500
 first_layer_acceleration_over_raft = 0
 first_layer_extrusion_width = 0.5
