--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -653,3 +653,7 @@ else ()
 endif ()
 
 configure_file(${LIBDIR}/platform/unix/fhs.hpp.in ${LIBDIR_BIN}/platform/unix/fhs.hpp)
+
+if (NOT WIN32 AND NOT APPLE)
+   configure_file(${LIBDIR}/platform/unix/build_appimage.sh.in ${LIBDIR_BIN}/build_appimage.sh @ONLY)
+endif()
