--- a/src/platform/unix/BuildLinuxImage.sh.in
+++ b/src/platform/unix/BuildLinuxImage.sh.in
@@ -9,6 +9,7 @@
 # Change log:
 #
 # 20 Nov 2023, wschadow, branding and minor changes
+# 01 Jan 2024, wschadow, debranding for the Prusa version, added build options
 #
 
 # Our sysctl call may be run as normal user,
@@ -20,7 +21,7 @@ fi
 export ROOT=`pwd`
 export NCORES=`nproc`
 
-while getopts ":iha" opt; do
+while getopts ":ihag" opt; do
   case ${opt} in
     i )
         export BUILD_IMAGE="1"
@@ -28,9 +29,13 @@ while getopts ":iha" opt; do
     a )
         export BUILD_APP="1"
         ;;
-    h ) echo "Usage: ./BuildLinuxImage.sh [-i] [-h]"
-        echo "   -i: Generate Appimage (optional)"
-	echo "   -a: Generate tgz (optional)"
+    g )
+        export FORCE_GTK2="1"
+        ;;
+    h ) echo "Usage: ./BuildLinuxImage.sh [-g][-i] [-h]"
+        echo "   -g: force gtk2 build"
+        echo "   -i: generate Appimage (optional)"
+	echo "   -a: generate tgz (optional)"
         echo "   -h: help"
         exit 0
         ;;
@@ -62,7 +67,7 @@ then
     echo -e '#!/bin/bash\nDIR=$(readlink -f "$0" | xargs dirname)\nexport LD_LIBRARY_PATH="$DIR/bin"\nexec "$DIR/bin/@SLIC3R_APP_NAME@" "$@"' > package/@SLIC3R_APP_NAME@
     chmod ug+x package/@SLIC3R_APP_NAME@
     pushd package > /dev/null
-    if [[ -z "$FOUND_GTK3_DEV" ]]
+    if [[ -z "$FORCE_GTK2" ]]
     then
 	tar -czvf ../@SLIC3R_APP_KEY@-@SLIC3R_VERSION@-GTK3-linux64.tgz .  &>/dev/null
     else
@@ -80,7 +85,7 @@ then
     chmod +x ../src/build_appimage.sh
     ../src/build_appimage.sh
     popd  > /dev/null
-    if [[ -z "$FOUND_GTK3_DEV" ]]
+    if [[ -z "$FORCE_GTK2" ]]
     then
 	mv package/"@SLIC3R_APP_KEY@_ubu64.AppImage" "@SLIC3R_APP_KEY@-@SLIC3R_VERSION@-GTK3-linux-x64.AppImage"
     else
