--- a/resources/profiles/CR3D.ini
+++ b/resources/profiles/CR3D.ini
@@ -24,7 +24,7 @@ variants = Standard 0.4
 technology = FFF
 family = C-Serie
 bed_model = PrintBed_C1mini.stl
-bed_texture = dq2_bed_texture.svg
+bed_texture = C1.svg
 default_materials = CR-3D ABS; CR-3D ABS-FibCR20; CR-3D ASA; CR-3D CRystal PLA; CR-3D No Filament; CR-3D PA 6 C4 (Carbon); CR-3D PA 6 G4 (Glasfaser); CR-3D PA12; CR-3D PC-ABS; CR-3D PC-FibCR20; CR-3D PETG; CR-3D PLA; CR-3D PP FibCR20; CR-3D Silikon; CR-3D Soft PLA; CR-3D Support; CR-3D TPU 85A
 
 [printer_model:C1²]
@@ -33,7 +33,7 @@ variants = Standard 0.4
 technology = FFF
 family = C-Serie
 bed_model = PrintBed_C1².stl
-bed_texture = dq2_bed_texture.svg
+bed_texture = C1.svg
 default_materials = CR-3D ABS; CR-3D ABS-FibCR20; CR-3D ASA; CR-3D CRystal PLA; CR-3D No Filament; CR-3D PA 6 C4 (Carbon); CR-3D PA 6 G4 (Glasfaser); CR-3D PA12; CR-3D PC-ABS; CR-3D PC-FibCR20; CR-3D PETG; CR-3D PLA; CR-3D PP FibCR20; CR-3D Silikon; CR-3D Soft PLA; CR-3D Support; CR-3D TPU 85A
 
 [printer_model:C1]
@@ -42,7 +42,7 @@ variants = Standard 0.4
 technology = FFF
 family = C-Serie
 bed_model = PrintBed_C1.stl
-bed_texture = dq2_bed_texture.svg
+bed_texture = C1.svg
 default_materials = CR-3D ABS; CR-3D ABS-FibCR20; CR-3D ASA; CR-3D CRystal PLA; CR-3D No Filament; CR-3D PA 6 C4 (Carbon); CR-3D PA 6 G4 (Glasfaser); CR-3D PA12; CR-3D PC-ABS; CR-3D PC-FibCR20; CR-3D PETG; CR-3D PLA; CR-3D PP FibCR20; CR-3D Silikon; CR-3D Soft PLA; CR-3D Support; CR-3D TPU 85A
 
 [printer_model:C1-Xtend]
@@ -51,7 +51,7 @@ variants = Standard 0.4
 technology = FFF
 family = C-Serie
 bed_model = PrintBed_C1-Xtend.stl
-bed_texture = dq2_bed_texture.svg
+bed_texture = C1.svg
 default_materials = CR-3D ABS; CR-3D ABS-FibCR20; CR-3D ASA; CR-3D CRystal PLA; CR-3D No Filament; CR-3D PA 6 C4 (Carbon); CR-3D PA 6 G4 (Glasfaser); CR-3D PA12; CR-3D PC-ABS; CR-3D PC-FibCR20; CR-3D PETG; CR-3D PLA; CR-3D PP FibCR20; CR-3D Silikon; CR-3D Soft PLA; CR-3D Support; CR-3D TPU 85A
 
 [printer_model:C2-IDEX]
@@ -60,7 +60,7 @@ variants = Standard 0.4; (DuplicateMode) Standard 0.4
 technology = FFF
 family = C-Serie
 bed_model = PrintBed_C2-IDEX.stl
-bed_texture = dq2_bed_texture.svg
+bed_texture = C2.svg
 default_materials = CR-3D ABS; CR-3D ABS-FibCR20; CR-3D ASA; CR-3D CRystal PLA; CR-3D No Filament; CR-3D PA 6 C4 (Carbon); CR-3D PA 6 G4 (Glasfaser); CR-3D PA12; CR-3D PC-ABS; CR-3D PC-FibCR20; CR-3D PETG; CR-3D PLA; CR-3D PP FibCR20; CR-3D Silikon; CR-3D Soft PLA; CR-3D Support; CR-3D TPU 85A
 
 [printer_model:C2-IDEX-Xtend]
@@ -69,7 +69,7 @@ variants = Standard 0.4; (DuplicateMode) Standard 0.4
 technology = FFF
 family = C-Serie
 bed_model = PrintBed_C2-IDEX-Xtend.stl
-bed_texture = dq2_bed_texture.svg
+bed_texture = C2.svg
 default_materials = CR-3D ABS; CR-3D ABS-FibCR20; CR-3D ASA; CR-3D CRystal PLA; CR-3D No Filament; CR-3D PA 6 C4 (Carbon); CR-3D PA 6 G4 (Glasfaser); CR-3D PA12; CR-3D PC-ABS; CR-3D PC-FibCR20; CR-3D PETG; CR-3D PLA; CR-3D PP FibCR20; CR-3D Silikon; CR-3D Soft PLA; CR-3D Support; CR-3D TPU 85A
 
 [printer_model:I444]
@@ -78,7 +78,7 @@ variants = Standard 0.4
 technology = FFF
 family = I-Serie
 bed_model = PrintBed_I444.stl
-bed_texture = dq2_bed_texture.svg
+bed_texture = I444.svg
 default_materials = CR-3D ABS; CR-3D ABS-FibCR20; CR-3D ASA; CR-3D CRystal PLA; CR-3D No Filament; CR-3D PA 6 C4 (Carbon); CR-3D PA 6 G4 (Glasfaser); CR-3D PA12; CR-3D PC-ABS; CR-3D PC-FibCR20; CR-3D PETG; CR-3D PLA; CR-3D PP FibCR20; CR-3D Silikon; CR-3D Soft PLA; CR-3D Support; CR-3D TPU 85A
 
 [printer_model:I444-IDEX]
@@ -87,34 +87,7 @@ variants = Standard 0.4; (DuplicateMode) Standard 0.4
 technology = FFF
 family = I-Serie
 bed_model = PrintBed_I444-IDEX.stl
-bed_texture = dq2_bed_texture.svg
-default_materials = CR-3D ABS; CR-3D ABS-FibCR20; CR-3D ASA; CR-3D CRystal PLA; CR-3D No Filament; CR-3D PA 6 C4 (Carbon); CR-3D PA 6 G4 (Glasfaser); CR-3D PA12; CR-3D PC-ABS; CR-3D PC-FibCR20; CR-3D PETG; CR-3D PLA; CR-3D PP FibCR20; CR-3D Silikon; CR-3D Soft PLA; CR-3D Support; CR-3D TPU 85A
-
-[printer_model:I555-IDEX]
-name = I555-IDEX
-variants = Standard 0.4; (DuplicateMode) Standard 0.4
-technology = FFF
-family = I-Serie
-bed_model = PrintBed_I555-IDEX.stl
-bed_texture = dq2_bed_texture.svg
-default_materials = CR-3D ABS; CR-3D ABS-FibCR20; CR-3D ASA; CR-3D CRystal PLA; CR-3D No Filament; CR-3D PA 6 C4 (Carbon); CR-3D PA 6 G4 (Glasfaser); CR-3D PA12; CR-3D PC-ABS; CR-3D PC-FibCR20; CR-3D PETG; CR-3D PLA; CR-3D PP FibCR20; CR-3D Silikon; CR-3D Soft PLA; CR-3D Support; CR-3D TPU 85A
-
-[printer_model:I655]
-name = I655
-variants = Standard 0.4
-technology = FFF
-family = I-Serie
-bed_model = PrintBed_I655.stl
-bed_texture = dq2_bed_texture.svg
-default_materials = CR-3D ABS; CR-3D ABS-FibCR20; CR-3D ASA; CR-3D CRystal PLA; CR-3D No Filament; CR-3D PA 6 C4 (Carbon); CR-3D PA 6 G4 (Glasfaser); CR-3D PA12; CR-3D PC-ABS; CR-3D PC-FibCR20; CR-3D PETG; CR-3D PLA; CR-3D PP FibCR20; CR-3D Silikon; CR-3D Soft PLA; CR-3D Support; CR-3D TPU 85A
-
-[printer_model:I65X]
-name = I65X
-variants = Standard 0.4
-technology = FFF
-family = I-Serie
-bed_model = PrintBed_I65X.stl
-bed_texture = dq2_bed_texture.svg
+bed_texture = I444-IDEX.svg
 default_materials = CR-3D ABS; CR-3D ABS-FibCR20; CR-3D ASA; CR-3D CRystal PLA; CR-3D No Filament; CR-3D PA 6 C4 (Carbon); CR-3D PA 6 G4 (Glasfaser); CR-3D PA12; CR-3D PC-ABS; CR-3D PC-FibCR20; CR-3D PETG; CR-3D PLA; CR-3D PP FibCR20; CR-3D Silikon; CR-3D Soft PLA; CR-3D Support; CR-3D TPU 85A
 
 [printer_model:L1]
@@ -5920,380 +5893,6 @@ wipe_speed = 0,0
 z_offset = 0
 z_step = 0.005
 
-[printer:CR-3D I555-IDEX - DuplicateMode]
-bed_custom_model = 
-bed_custom_texture = 
-bed_shape = 15x0,455x0,455x490,15x490
-before_layer_gcode = 
-between_objects_gcode = 
-color_change_gcode = @pause
-cooling_tube_length = 5
-cooling_tube_retraction = 91.5
-default_filament_profile = ""
-default_print_profile = 
-deretract_speed = 0,0,0
-end_gcode = M0\n
-extra_loading_move = -2
-extruder_colour = #007577;#C0C0C0;#FF0000
-extruder_fan_offset = 0%,0%,0%
-extruder_offset = 0x0,0x0,0x0
-extruder_temperature_offset = 0,0,0
-fan_kickstart = 0
-fan_percentage = 0
-fan_speedup_overhangs = 1
-fan_speedup_time = 0
-feature_gcode = 
-gcode_filename_illegal_char = 
-gcode_flavor = reprap
-gcode_precision_e = 5
-gcode_precision_xyz = 3
-high_current_on_filament_swap = 0
-host_type = repetier
-inherits = 
-init_z_rotate = 0
-layer_gcode = 
-lift_min = 0.5
-machine_limits_usage = ignore
-machine_max_acceleration_e = 10000,5000
-machine_max_acceleration_extruding = 1500,1250
-machine_max_acceleration_retracting = 1500,1250
-machine_max_acceleration_travel = 1500,1250
-machine_max_acceleration_x = 9000,1000
-machine_max_acceleration_y = 9000,1000
-machine_max_acceleration_z = 500,200
-machine_max_feedrate_e = 120,120
-machine_max_feedrate_x = 500,200
-machine_max_feedrate_y = 500,200
-machine_max_feedrate_z = 12,12
-machine_max_jerk_e = 2.5,2.5
-machine_max_jerk_x = 10,10
-machine_max_jerk_y = 10,10
-machine_max_jerk_z = 0.2,0.4
-machine_min_extruding_rate = 0,0
-machine_min_travel_rate = 0,0
-max_gcode_per_second = 1500
-max_layer_height = 0,0,0
-max_print_height = 500
-milling_diameter = 
-milling_toolchange_end_gcode = 
-milling_toolchange_start_gcode = 
-milling_z_lift = 
-min_layer_height = 0.1,0.1,0.1
-min_length = 0.035
-nozzle_diameter = 0.4,0.4,0.4
-parking_pos_retraction = 92
-pause_print_gcode = @pause
-print_host = 
-printer_custom_variables = 
-printer_model = I555-IDEX
-printer_notes = 
-printer_settings_id = 
-printer_technology = FFF
-printer_variant = (DuplicateMode) Standard 0.4
-printer_vendor =CR3D 
-printhost_apikey = 
-printhost_cafile = 
-printhost_port = 
-remaining_times = 0
-remaining_times_type = m73
-retract_before_travel = 2,2,2
-retract_before_wipe = 0%,0%,0%
-retract_layer_change = 0,0,0
-retract_length = 2,2,2
-retract_length_toolchange = 10,10,10
-retract_lift = 0.2,0.2,0.2
-retract_lift_above = 0,0,0
-retract_lift_below = 0,0,0
-retract_lift_first_layer = 0,0,0
-retract_lift_top = "All surfaces";"All surfaces";"All surfaces"
-retract_restart_extra = 0,0,0
-retract_restart_extra_toolchange = 0,0,0
-retract_speed = 80,80,80
-seam_gap = 15%,15%,15%
-silent_mode = 1
-single_extruder_multi_material = 0
-start_gcode = T[initial_tool]\nM104  S{first_layer_temperature[0]} T0 ; set extruder temp from extruder left\nM104  S{first_layer_temperature[0]} T1 ; set extruder temp from extruder right\n\nM140 S[first_layer_bed_temperature] ; set bed temp\nM190 S[first_layer_bed_temperature] ; wait for bed temp\nM109 T0 S[first_layer_temperature] ; wait for left extruder temp\nM109 T1 S[first_layer_temperature] ; wait for right extruder temp\n\nM98 P"start.g"\n@call PrintStartScript\n\nM98 P"0:/macros/ActivateDuplicateMode.g"\n\nM104  S{first_layer_temperature[0]} T2 ; set extruder temp for the duplicate extruders\nM109 T2 S[first_layer_temperature] ; wait for extruder temp\n
-start_gcode_manual = 0
-template_custom_gcode = 
-thumbnails = 16x16,220x124
-thumbnails_color = #018aff
-thumbnails_custom_color = 0
-thumbnails_end_file = 0
-thumbnails_format = PNG
-thumbnails_with_bed = 1
-time_cost = 5
-time_estimation_compensation = 100%
-time_start_gcode = 100
-time_toolchange = 30
-tool_name = Links;Rechts;DuplicateMode
-toolchange_gcode = 
-use_firmware_retraction = 0
-use_relative_e_distances = 1
-use_volumetric_e = 0
-variable_layer_height = 1
-wipe = 0,0,0
-wipe_advanced = 0
-wipe_advanced_algo = linear
-wipe_advanced_multiplier = 60
-wipe_advanced_nozzle_melted_volume = 120
-wipe_extra_perimeter = 0,0,0
-wipe_inside_depth = 50%,50%,50%
-wipe_inside_end = 1,1,1
-wipe_inside_start = 0,0,0
-wipe_only_crossing = 1,1,1
-wipe_speed = 0,0,0
-z_offset = 0
-z_step = 0.005
-
-[printer:CR-3D I555-IDEX]
-bed_custom_model = 
-bed_custom_texture = 
-bed_shape = 0x0,465x0,465x500,0x500
-before_layer_gcode = 
-between_objects_gcode = 
-color_change_gcode = @pause
-cooling_tube_length = 5
-cooling_tube_retraction = 91.5
-default_filament_profile = ""
-default_print_profile = 
-deretract_speed = 0,0
-end_gcode = M0\n
-extra_loading_move = -2
-extruder_colour = #007577;#C0C0C0
-extruder_fan_offset = 0%,0%
-extruder_offset = 0x0,0x0
-extruder_temperature_offset = 0,0
-fan_kickstart = 0
-fan_percentage = 0
-fan_speedup_overhangs = 1
-fan_speedup_time = 0
-feature_gcode = 
-gcode_filename_illegal_char = [<>:"/\\\\|?*]
-gcode_flavor = reprap
-gcode_precision_e = 5
-gcode_precision_xyz = 3
-high_current_on_filament_swap = 0
-host_type = repetier
-inherits = 
-init_z_rotate = 0
-layer_gcode = 
-lift_min = 0.5
-machine_limits_usage = ignore
-machine_max_acceleration_e = 10000,5000
-machine_max_acceleration_extruding = 1500,1250
-machine_max_acceleration_retracting = 1500,1250
-machine_max_acceleration_travel = 1500,1250
-machine_max_acceleration_x = 9000,1000
-machine_max_acceleration_y = 9000,1000
-machine_max_acceleration_z = 500,200
-machine_max_feedrate_e = 120,120
-machine_max_feedrate_x = 500,200
-machine_max_feedrate_y = 500,200
-machine_max_feedrate_z = 12,12
-machine_max_jerk_e = 2.5,2.5
-machine_max_jerk_x = 10,10
-machine_max_jerk_y = 10,10
-machine_max_jerk_z = 0.2,0.4
-machine_min_extruding_rate = 0,0
-machine_min_travel_rate = 0,0
-max_gcode_per_second = 1500
-max_layer_height = 0,0
-max_print_height = 500
-milling_diameter = 
-milling_toolchange_end_gcode = 
-milling_toolchange_start_gcode = 
-milling_z_lift = 
-min_layer_height = 0.1,0.1
-min_length = 0.035
-nozzle_diameter = 0.4,0.4
-parking_pos_retraction = 92
-pause_print_gcode = @pause
-print_host = 
-printer_custom_variables = 
-printer_model = I555-IDEX
-printer_notes = 
-printer_settings_id = CR-3D I555-IDEX 
-printer_technology = FFF
-printer_variant = Standard 0.4
-printer_vendor = CR3D
-printhost_apikey = 
-printhost_cafile = 
-printhost_port = 
-remaining_times = 0
-remaining_times_type = m73
-retract_before_travel = 2,2
-retract_before_wipe = 0%,0%
-retract_layer_change = 0,0
-retract_length = 2,2
-retract_length_toolchange = 10,10
-retract_lift = 0.2,0.2
-retract_lift_above = 0,0
-retract_lift_below = 0,0
-retract_lift_first_layer = 0,0
-retract_lift_top = "All surfaces";"All surfaces"
-retract_restart_extra = 0,0
-retract_restart_extra_toolchange = 0,0
-retract_speed = 80,80
-seam_gap = 15%,15%
-silent_mode = 1
-single_extruder_multi_material = 0
-start_gcode = T[initial_tool]\nM104  S{first_layer_temperature[0]} T0 ; set extruder temp from extruder 0\nM104  S{first_layer_temperature[1]} T1 ; set extruder temp from extruder 0\n\nM140 S[first_layer_bed_temperature] ; set bed temp\nM190 S[first_layer_bed_temperature] ; wait for bed temp\nM109 T[initial_tool] S[first_layer_temperature] ; wait for extruder temp\n\nM98 P"start.g"\n@call PrintStartScript\nT[initial_tool]
-start_gcode_manual = 0
-template_custom_gcode = 
-thumbnails = 16x16,220x124
-thumbnails_color = #018aff
-thumbnails_custom_color = 0
-thumbnails_end_file = 0
-thumbnails_format = PNG
-thumbnails_with_bed = 1
-time_cost = 4
-time_estimation_compensation = 100%
-time_start_gcode = 100
-time_toolchange = 30
-tool_name = Links;Rechts
-toolchange_gcode = 
-use_firmware_retraction = 0
-use_relative_e_distances = 1
-use_volumetric_e = 0
-variable_layer_height = 1
-wipe = 0,0
-wipe_advanced = 0
-wipe_advanced_algo = linear
-wipe_advanced_multiplier = 60
-wipe_advanced_nozzle_melted_volume = 120
-wipe_extra_perimeter = 0,0
-wipe_inside_depth = 50%,50%
-wipe_inside_end = 1,1
-wipe_inside_start = 0,0
-wipe_only_crossing = 1,1
-wipe_speed = 0,0
-z_offset = 0
-z_step = 0.005
-
-[printer:CR-3D I655]
-bed_custom_model = 
-bed_custom_texture = 
-bed_shape = 0x0,590x0,590x490,0x490
-before_layer_gcode = 
-between_objects_gcode = 
-color_change_gcode = @pause
-cooling_tube_length = 5
-cooling_tube_retraction = 91.5
-default_filament_profile = ""
-default_print_profile = 
-deretract_speed = 0
-end_gcode = M0 ; Turn off everything\n\n
-extra_loading_move = -2
-extruder_colour = #408080
-extruder_fan_offset = 0%
-extruder_offset = 0x0
-extruder_temperature_offset = 0
-fan_kickstart = 0
-fan_percentage = 0
-fan_speedup_overhangs = 1
-fan_speedup_time = 0
-feature_gcode = 
-gcode_filename_illegal_char = [<>:"/\\\\|?*]
-gcode_flavor = reprap
-gcode_precision_e = 5
-gcode_precision_xyz = 3
-high_current_on_filament_swap = 0
-host_type = repetier
-inherits = 
-init_z_rotate = 0
-layer_gcode = 
-lift_min = 0.5
-machine_limits_usage = ignore
-machine_max_acceleration_e = 10000,5000
-machine_max_acceleration_extruding = 1500,1250
-machine_max_acceleration_retracting = 1500,1250
-machine_max_acceleration_travel = 1500,1250
-machine_max_acceleration_x = 9000,1000
-machine_max_acceleration_y = 9000,1000
-machine_max_acceleration_z = 500,200
-machine_max_feedrate_e = 120,120
-machine_max_feedrate_x = 500,200
-machine_max_feedrate_y = 500,200
-machine_max_feedrate_z = 12,12
-machine_max_jerk_e = 2.5,2.5
-machine_max_jerk_x = 10,10
-machine_max_jerk_y = 10,10
-machine_max_jerk_z = 0.2,0.4
-machine_min_extruding_rate = 0,0
-machine_min_travel_rate = 0,0
-max_gcode_per_second = 1500
-max_layer_height = 0
-max_print_height = 500
-milling_diameter = 
-milling_toolchange_end_gcode = 
-milling_toolchange_start_gcode = 
-milling_z_lift = 
-min_layer_height = 0.1
-min_length = 0.035
-nozzle_diameter = 0.4
-parking_pos_retraction = 92
-pause_print_gcode = @pause
-print_host = 
-printer_custom_variables = 
-printer_model = I655
-printer_notes = 
-printer_settings_id = 
-printer_technology = FFF
-printer_variant = Standard 0.4
-printer_vendor = CR3D
-printhost_apikey = 
-printhost_cafile = 
-printhost_port = 
-remaining_times = 0
-remaining_times_type = m73
-retract_before_travel = 2
-retract_before_wipe = 0%
-retract_layer_change = 0
-retract_length = 2
-retract_length_toolchange = 10
-retract_lift = 0.2
-retract_lift_above = 0
-retract_lift_below = 0
-retract_lift_first_layer = 0
-retract_lift_top = "All surfaces"
-retract_restart_extra = 0
-retract_restart_extra_toolchange = 0
-retract_speed = 80
-seam_gap = 15%
-silent_mode = 1
-single_extruder_multi_material = 0
-start_gcode = M98 P"start.g"\n@call PrintStartScript\n
-start_gcode_manual = 0
-template_custom_gcode = 
-thumbnails = 16x16,220x124
-thumbnails_color = #018aff
-thumbnails_custom_color = 0
-thumbnails_end_file = 0
-thumbnails_format = PNG
-thumbnails_with_bed = 1
-time_cost = 4
-time_estimation_compensation = 100%
-time_start_gcode = 100
-time_toolchange = 30
-tool_name = Düse
-toolchange_gcode = 
-use_firmware_retraction = 0
-use_relative_e_distances = 1
-use_volumetric_e = 0
-variable_layer_height = 1
-wipe = 0
-wipe_advanced = 0
-wipe_advanced_algo = linear
-wipe_advanced_multiplier = 60
-wipe_advanced_nozzle_melted_volume = 120
-wipe_extra_perimeter = 0
-wipe_inside_depth = 50%
-wipe_inside_end = 1
-wipe_inside_start = 0
-wipe_only_crossing = 1
-wipe_speed = 0
-z_offset = 0
-z_step = 0.005
 
 [printer:CR-3D L1]
 bed_custom_model = 
